resources/testcases_static_checks/tests/positive/isRmfc/r16.rls
../../../tests_common_data/from-evaluation-section/r16.rls