resources/testcases_static_checks/tests/negative/isRmfc/r03.rls
../../../tests_common_data/from-evaluation-section/r03.rls